Remove JavaFX code